# legion

./: .gitignore  Cargo.toml  ordertypes_generated.rs
src/: arena.rs  lib.rs  main.rs  models.rs  orderbook.rs  orderbook_test.rs  rejectmessages.rs  wasm.rs
src/protobuf/: ordertypes.fbs
src/tests/: cancel-book-middle.txt  cancel-top-of-book-all.txt  cancel-top-of-book-some.txt  fok-bid-cancelled.txt  fok-bid-completelyfilled.txt  fok-bid-partialcancelled.txt  ioc-bid-cancelled.txt  ioc-bid-completelyfilled.txt  ioc-bid-partiallyfilled.txt  limit-bid-completelyfilled-one-level-1.txt  limit-bid-completelyfilled-one-level.txt  limit-bid-completelyfilled-two-level-1.txt  limit-bid-completelyfilled-two-level.txt  limit-bid-partiallyfilled-one-level.txt  limit-bid-partiallyfilled-two-level.txt  marke-bid-noliquidity.txt  market-ask-noliquidity.txt  marketorder-noliquidity-ask.txt  marketorder-noliquidity.txt  postonly-bid-cancelled.txt  postonly-bid-open.txt  postonlyslide-bid-open.txt  restingorder.txt  restingorders.txt
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: app.html
ui/src/components/display/: ColorText.svelte  InlineEdit.svelte  LabelValue.svelte  Price.svelte
ui/src/components/market-depth/: DepthRow.svelte
ui/src/routes/: +layout.js  +layout.svelte  +page.svelte
ui/static/: legion_bg.wasm
