[package]
name = "legion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
thiserror = "1.0"
strum_macros = "0.24"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = { version = "0.1.6", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]



[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
